(smola-changes) all smola changes from beginning until 2011-10-06